Fix CSS clipping

--- a/src/Card.css
+++ b/src/Card.css
@@ -23,32 +23,30 @@
 }
 
 .ReactFlipCard {
-    text-align: center;
-  }
+  margin: 25px;
+  text-align: center;
+}
 
-  .ReactFlipCard__Flipper {
-    transition-duration: 13s;
-  }
-  .ReactFlipCard,
-  .ReactFlipCard__Front,
-  .ReactFlipCard__Back {
-    box-sizing: border-box;
-    width: 217px;
-    height: 290px;
-  }
-  .ReactFlipCard__Front,
-  .ReactFlipCard__Back {
-    /*border-radius: 5px;*/
-  }
-  .ReactFlipCard__Front {
-    background-color: #eee;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-  .ReactFlipCard__Back {
-    background-color: #222;
-    color: #ffffff;
-  }
+.ReactFlipCard,
+.ReactFlipCard__Front,
+.ReactFlipCard__Back {
+  box-sizing: border-box;
+  width: 217px;
+  height: 290px;
+}
+
+.ReactFlipCard__Front,
+.ReactFlipCard__Back {
+  border: 1px solid #ccc;
+}
+
+.ReactFlipCard__Front {
+  background-color: #eee;
+}
+.ReactFlipCard__Back {
+  background-color: black;
+  color: white;
+}
 
 @keyframes Card-logo-spin {
   from { transform: rotate(0deg); }
